--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px 0;
     
 }
 
@@ -15,6 +15,7 @@
     width: 100%;
     max-width: 120px;
     height: auto;
+    border-radius:5px;
    
 }
 
