--- a/src/Pages/Main/Hero/Hero.css
+++ b/src/Pages/Main/Hero/Hero.css
@@ -14,6 +14,7 @@
 }
 
 .hero-title {
+    font-family: "Kanit", sans-serif;
     font-size: 4rem;
     font-weight: 700;
     line-height: 1.2;
@@ -23,6 +24,7 @@
 }
 
 .hero-in-title {
+    font-family: "Kanit", sans-serif;
     font-weight: 600;
     font-size: 2.5rem;
 
@@ -36,8 +38,9 @@
 }
 
 .hero-in-stats {
+    
     font-size:2rem;
-    font-weight:500;
+    font-weight:400;
 color: hsl(43deg 100% 50%)
 }
 
