--- a/src/Pages/Main/Hero/Hero.css
+++ b/src/Pages/Main/Hero/Hero.css
@@ -14,7 +14,7 @@
 }
 
 .hero-title {
-    font-family: "Kanit", sans-serif;
+    font-family: "Paytone One", sans-serif;
     font-size: 4rem;
     font-weight: 700;
     line-height: 1.2;
@@ -24,7 +24,8 @@
 }
 
 .hero-in-title {
-    font-family: "Kanit", sans-serif;
+    font-family: "Paytone One", sans-serif;
+  
     font-weight: 600;
     font-size: 2.5rem;
 
@@ -38,7 +39,7 @@
 }
 
 .hero-in-stats {
-    
+    font-family: "Paytone One", sans-serif;
     font-size:2rem;
     font-weight:400;
 color: hsl(43deg 100% 50%)
@@ -46,7 +47,7 @@ color: hsl(43deg 100% 50%)
 
 .hero-img-bg {
     position: relative;
-    background-image: url('../../../assets/Images/mainhero2.png');
+    background-image: url('../../../assets/Images/herobg.png');
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
@@ -62,8 +63,8 @@ color: hsl(43deg 100% 50%)
     max-width: 800px;
     height: auto;
     position: absolute;
-    top: -108px;
-    left: 308px;
+    top: -98px;
+    left: 300px;
 }
 
 .hero-circle {
