--- a/src/Pages/Main/Hero/Hero.css
+++ b/src/Pages/Main/Hero/Hero.css
@@ -1,6 +1,6 @@
 .hero-section {
-    background-color: hsl(249deg 43% 12%);
-    color: #fff;
+    background-color: hsl(249, 44%, 12%);
+   color: hsl(51deg 98% 95%);
     padding: 60px 0 50px 0;
     
 }
@@ -18,6 +18,7 @@
     font-size: 4rem;
     font-weight: 700;
     line-height: 1.2;
+    
     
    
 
