--- a/src/Pages/Main/Services/Services.css
+++ b/src/Pages/Main/Services/Services.css
@@ -1,6 +1,6 @@
 .services {
     padding: 50px 0;
-    background-color: #ffffff;
+    background-color: hsl(0, 0%, 100%);
     
 }
 
@@ -19,33 +19,17 @@
     align-items: center;
     flex-wrap: wrap;
     margin-top: 50px;
+    gap: 20px;
     margin-right: auto;
     margin-left: auto;
 width: 100%;
 max-width: 1100px;
 }
 
-.servicecard {
-    border-bottom: 1px solid #000000;
-    margin-bottom: 20px;
-    }
+
 
 
     
-    .servicecard-img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    
-    border-radius: 8px;
-    }
-
-.servicecard-title {
-
-    font-size: 1.5rem;
-    font-weight: 600;
-    line-height: 1.2;
-    margin: 5px 0;
    
-}
+
     
