--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ body {
   line-height: 1.5;
   /* 4. Improve text rendering */
   -webkit-font-smoothing: antialiased;
+  background-color: #1c1e31;
 }
 
 /* 5. Improve media defaults */
