--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -1,164 +1,129 @@
+/* Responsive Footer Styles */
+
 .footer {
-background-color: hsl(233deg 28% 15%);
-    padding : 30px 0 150px 0;
+    background-color: hsl(233deg 28% 15%);
+    padding: 30px 0 150px 0;
     position: relative;
     overflow: hidden;
 }
 
 .footer-top-wrapper {
-    position       : relative;
-    z-index        : 2;
-    display        : flex;
+    position: relative;
+    z-index: 2;
+    display: flex;
     justify-content: space-between;
-    width          : 100%;
+    width: 100%;
     align-items: center;
 }
 
 .footer-logo {
-    font-weight   : 700;
-    font-size     : 36px;
-    color         : #FF0073;
-    word-spacing  : 1px;
+    font-weight: 700;
+    font-size: 36px;
+    color: #FF0073;
+    word-spacing: 1px;
     letter-spacing: 0.5px;
-
 }
 
 .footer-list {
-    display        : flex;
+    display: flex;
     justify-content: space-between;
-    width          : 450px;
-
+    width: 450px;
 }
 
 .footer-nav-link {
-    color    : #F9F4DA;
+    color: #F9F4DA;
     font-size: 20px;
 }
 
-
-
 .footer-tel {
-    font-size     : 36px;
-    color         : #F9F4DA;
-    word-spacing  : 1px;
+    font-size: 36px;
+    color: #F9F4DA;
+    word-spacing: 1px;
     letter-spacing: 0.5px;
 }
 
-
-
-.footer-social-link {
-    font-weight     : 500;
-    font-size       : 20px;
-    color           : #050861;
-    display         : flex;
-    justify-content : center;
-    align-items     : center;
-    padding         : 15px;
-    background-color: #F2F2F2;
-    border-radius   : 20px;
-    width           : 100%;
-    max-width       : 250px;
-    word-spacing    : 1px;
-    letter-spacing  : 0.5px;
-
+.footer-owner {
+    position: relative;
+    z-index: 5;
+    margin-top: 15px;
+    color: #fff;
 }
 
 .footer-bg {
-    position      : absolute;
-    z-index       : 1;
-    top           : -35px;
-    left          : 0px;
-    right         : 0px;
-    bottom        : 0px;
-    width         : 100%;
-    opacity       : 1;
-    filter        : blur(8px);
+    position: absolute;
+    z-index: 1;
+    top: -35px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    opacity: 1;
+    filter: blur(8px);
     background-color: hsl(233deg 28% 15%);
-    display       : flex;
+    display: flex;
     flex-direction: column;
-    overflow      : hidden;
+    overflow: hidden;
 }
 
 .footer-img {
     width: 100%;
 }
 
-.footer-owner {
-    position  : relative;
-    z-index   : 5;
-    margin-top: 15px;
-    color: #fff;
-}
+/* Responsive Adjustments */
 
-/* Responsive */
-
-@media screen and (max-width:900px) {
-
+@media screen and (max-width: 900px) {
     .footer {
         padding: 50px 0;
     }
 
     .footer-top-wrapper {
-        display       : flex;
         flex-direction: column;
-        align-items   : center;
-
+        align-items: center;
+        text-align: center;
     }
 
     .footer-list {
-        margin: 80px 0;
-        width : 400px;
+        margin: 40px 0;
+        width: 100%;
+        max-width: 400px;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .footer-owner {
-        margin: 50px auto 0 auto;
+        margin-top: 30px;
     }
 }
 
-
-@media screen and (max-width:500px) {
-
-    .footer {
-        padding: 50px 0;
-    }
-
+@media screen and (max-width: 500px) {
     .footer-logo {
-        font-size: 30px;
-    }
-
-    .footer-top-wrapper {
-        display        : flex;
-        justify-content: center;
-        align-items    : center;
-
-
+        font-size: 28px;
     }
 
     .footer-list {
-        display        : flex;
-        flex-direction : column;
-        align-items    : center;
-        justify-content: center;
-        margin         : 30px 0;
-        width          : 200px;
+        flex-direction: column;
+        align-items: center;
+        width: auto;
+        margin:20px 0;
     }
 
     .footer-nav-link {
-        margin-top: 15px;
+       
+       gap: 10px;
+        font-size: 18px;
     }
 
     .footer-tel {
-        font-size: 25px;
-
+        font-size: 24px;
+        text-align: center;
     }
 
     .footer-owner {
-        margin: 50px auto 0 auto;
+        margin-top: 20px;
+        text-align: center;
     }
 
     .footer-bg {
-        opacity: 0;
+        display: none;
     }
-
-
 }
