--- a/src/Pages/Main/Hero/Hero.css
+++ b/src/Pages/Main/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero-section {
-    background-color: hsl(249, 44%, 12%);
+    background-color: #15112c;
     color: hsl(51deg 98% 95%);
     padding: 60px 0 50px 0;
 }
